# openNetDrive

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
.claude/: settings.local.json
